fix(material/checkbox): NVDA reading out clickable before checkbox label
NVDA has some behavior where if an `input` is placed inside an element with a `click` or `mousedown` listener, the screen reader considers it as "clickable" and reads out "clickable" before its label. This is always the case for our checkbox components, because they have ripples on their parent nodes.
These changes include the following fixes to address the issue.
1. For the non-MDC checkbox we move the `input` to the root of the component since it's invisible and it doesn't matter where we put it.
2. For the MDC checkbox we use the `input` as the ripple target. We can move the input around, because MDC uses sibling selectors for the checked styling. Furthermore, we take advantage of the fact the the input is stretched over the checkbox container.

--- a/src/material/checkbox/checkbox.scss
+++ b/src/material/checkbox/checkbox.scss
@@ -176,6 +176,7 @@ $_mat-checkbox-mark-stroke-size: 2 / 15 * checkbox-common.$size !default;
 
 .mat-checkbox {
   @include private.private-animation-noop();
+  position: relative;
 
   // The host node defaults to `diplay: inline` so
   // we have to change it in order for margins to work.
@@ -515,6 +516,12 @@ $_mat-checkbox-mark-stroke-size: 2 / 15 * checkbox-common.$size !default;
 .mat-checkbox-input {
   // Move the input to the bottom and in the middle.
   // Visual improvement to properly show browser popups when being required.
-  bottom: 0;
-  left: 50%;
+  $offset: checkbox-common.$size / 2;
+  bottom: $offset;
+  left: $offset;
+
+  [dir='rtl'] & {
+    left: auto;
+    right: $offset;
+  }
 }
